Envoi du formulaire step1

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,4 +1,13 @@
+Date of booking: Jour de votre visite
+dateOfBookingPlaceHolder: 01/01/2000
+Email: Votre adresse email
+example@example.example: example@example.example
+Journée: Journée
+Demi-journée: Demi-journée
+Ticket type: Type de ticket
+Number of tickets: Nombre de tickets
 base:
   title: Accueil
+  lang: fr
 step1:
-  email: Votre adresse email
+  formError: Les champs en rouge sont invalides.
