--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,3 +1,6 @@
+homepageTitle: Accueil
+step1Title: Réservation étape 1
+schedulesPrices: Horaires et tarifs
 Date of booking: Jour de votre visite
 dateOfBookingPlaceHolder: 01/01/2000
 Email: Votre adresse email
