--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -1,13 +1,85 @@
-Date of booking: Day of your visit
+home:
+  title: Home
+  schedulesPrices: Schedule and rates
+Date of booking: Date of your visit
 dateOfBookingPlaceHolder: dd/mm/yyyy
-Email: Votre adresse email
+Email: Your email address
 example@example.example: example@example.example
-Journée: Journée
-Demi-journée: Demi-journée
-Ticket type: Type de ticket
-Number of tickets: Nombre de tickets
+Journée: Journey
+Demi-journée: Half journey
+Ticket type: Ticket type
+Number of tickets: Number of tickets
+Delete: Delete
+halfJourney: half-journey
+Firstname: Firstname
+Lastname: Lastname
+Date of birth: Date of birth
+Country code: Country of residence
+
+ticket: Ticket
+
+young_child: Young child
+child: Child
+normal: Normal
+reduced: Reduced
+senior: Senior
+
+Card number: Card number
+Expiration month: Expiration month
+Expiration year: Expiration year
+Security code: Security code
+
 base:
-  title: Accueil
+  title: Homepage
   lang: en
+form:
+  formError: Red fields are invalid.
+  billStep1:
+    allJourney: All day
+    halfJourney: Half day
 step1:
-  formError: Les champs en rouge sont invalides.
+  title: Step booking 1
+  stepNumber: Step 1 of 3
+step2:
+  title: Step booking 2
+  stepNumber: Étape 2 of 3
+  firstnamePlaceHolder: Firstname
+  lastnamePlaceHolder: Lastname
+  dateOfBirthPlaceHolder: Date of birth
+  reducedPrice: I benefit from a reduced
+  identityCardRequired: It will be necessary to present a proof at the entrance, your student card, military or equivalent, to benefit from the reduced rate
+step3:
+  title: Step booking 3
+  stepNumber: Step 3 of 3
+  firstname: Firstname
+  lastname: Lastname
+  dateOfBirth: Date of birth
+  reducedPrice: Price
+  price: Price of ticket
+  deleteTicket: Delete a ticket
+  delete: Delete a ticket
+  deleteConfirmation: Are you sure you want to delete this ticket ?
+  totalPrice: Total including tax
+  oneTicketAtLeast: You must have at least one ticket in your order
+  orderDateOfBooking: Your order for the
+  reservedForTicketType: ickets reserved for a
+stripe:
+  title: Payment
+  placeholder:
+    card_number: Card number
+    expiration_date: Expiry date
+    security_code: Security code
+  unknowChargeError: An unknown error occurred
+thankyou:
+  title: Thanks for your order
+  billStripeId: Your order number is the
+  newBill: New order
+  commandAlreadyDone: This command is already completed
+  emailError: Sending your command failed to the adress
+  emailError2: please contact us with your order number
+  paymentMethod: Method of payment
+  orderId: Id Stripe
+  adressEmail: E-mail
+  orderDetails: Your tickets
+  total: Total
+  louvreTicketing: Billeterie du Louvre
